gitops/apps/radarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr:latest
          ports:
            - containerPort: 7878
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /movies
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: movies
          persistentVolumeClaim:
            claimName: pvc-radarr-media-movies
        - name: downloads
          persistentVolumeClaim:
            claimName: pvc-radarr-media-downloads
