gitops/apps/radarr/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  parentRefs:
    - name: internal-nginx
      namespace: gateway-system
  hostnames:
    - "radarr.loukawai.fr"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 7878
